# STM_32_DEV

./: .gitignore  README.md  build.sh  flash_config.cfg  port.svd  stm_usb.py
.github/workflows/: build-binaries.yml
src/: CMakeLists.txt  main.c  vtable.c
src/internal/: alloc.c  alloc.h  dma.c  dma.h  interrupt.c  interrupt.h  linker.ld  mmio.c  mmio.h  startup.c  vtable.c
src/peripheral/: clk.c  clk.h  errc.h  gpio.c  gpio.h  mutex.h  pwm.c  pwm.h  spi.c  spi.h  thread.h  uart.c  uart.h  watchdog.c  watchdog.h
src/util/: error.h
test/: test_alloc.c
